kubernetes/manifests/apps/ntfy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/version: 2.11.0
    helm.sh/chart: ntfy-0.2.2
  name: ntfy
  namespace: apps
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: ntfy
      app.kubernetes.io/name: ntfy
  serviceName: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ntfy
        app.kubernetes.io/name: ntfy
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - serve
            - --config
            - /var/lib/ntfy/config.yaml
          image: docker.io/binwiederhier/ntfy:v2.11.0
          imagePullPolicy: IfNotPresent
          name: ntfy
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/ntfy
              name: ntfy-config
            - mountPath: /data
              name: ntfy-pv
            - mountPath: /var/lib/ntfy/config.yaml
              name: ntfy-config
              subPath: config.yaml
      serviceAccountName: ntfy
      volumes:
        - configMap:
            items:
              - key: config.yaml
                path: config.yaml
            name: ntfy
          name: ntfy-config
        - name: ntfy-pv
          persistentVolumeClaim:
            claimName: ntfy-pvc
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/version: 2.11.0
    helm.sh/chart: ntfy-0.2.2
  name: ntfy
  namespace: apps
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/name: ntfy
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/version: 2.11.0
    helm.sh/chart: ntfy-0.2.2
  name: ntfy
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: ntfy.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: ntfy
                port:
                  number: 8443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ntfy.josevictor.me
      secretName: wildcard-tls
